src/objects/ER_MCC_to_Loop__c.object
<CustomObject>
    <fields>
        <fullName>ER_Behaviour__c</fullName>
        <label>Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Behaviour</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <formula>TEXT( ER_MCC__r.Owner:User.ER_Business_Unit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Loop__c</fullName>
        <label>Loop</label>
        <referenceTo>ER_Loop__c</referenceTo>
        <relationshipLabel>MCCs to Loops</relationshipLabel>
        <relationshipName>MCCs_to_Loops</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ER_MCC_Authorization_Code__c</fullName>
        <formula>ER_MCC__r.ER_MCC_Authorization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCC Authorization Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_MCC__c</fullName>
        <label>MCC</label>
        <referenceTo>ER_MCC__c</referenceTo>
        <relationshipLabel>MCCs to Loops</relationshipLabel>
        <relationshipName>MCCs_to_Loops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MCC to Loop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MCC-{0000}</displayFormat>
        <label>MCC to Loop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCCs to Loops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>